Ensure white space below pagination links.

--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -1,5 +1,6 @@
 html {
   margin: 0 $gutter;
+  padding-bottom: $gutter;
 }
 
 body {
